<resources>
    <string name="app_name">TopMarket</string>
    <string name="remaining_stocks">تنها %d عدد در انبار باقیست</string>
    <string name="price_discount">%1$d%%</string>
    <string name="product_avaialble">موجود در انبار</string>
    <string name="product_unavailable">ناموجود</string>
    <string name="products_latest">جدید ترین کالا</string>
    <string name="products_popular">محبوب ترین کالاها</string>
    <string name="products_top_rated">پرطرفدارترین کالاها</string>
    <string name="show_all">مشاهده همه</string>


    <!-- content descriptions -->
    <string name="actions_more">بیشتر</string>
    <string name="content_actions_more">More actions</string>
    <string name="action_like">افزودن به علاقه مندی ها</string>
    <string name="content_action_like">Like</string>
    <string name="action_cart">لیست خرید</string>
    <string name="content_cart">Cart</string>
    <string name="dot">•</string>
    <string name="product_description">ویژگی های محصول</string>
    <string name="categories_delimiter">&#160;/&#160;</string>

    <!-- mock for preview -->
    <string name="lorem_small">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="lorem_medium">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="lorem_large">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>

    <!-- product details -->
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="show_more">مشاهده بیشتر</string>
    <string name="rating_format">(%d)</string>
    <string name="product_reviews">دیدگاه کاربران</string>
    <string name="product_reviews_count">%d نظر</string>
    <string name="add_reviews_here">دیدگاه خود را درباره این کالا بنویسید</string>
    <string name="get_badges">5 امتیاز دیجی کلاب با ثبت دیدگاه پس از خرید کالا</string>

    <!-- Error messages -->
    <string name="error_bad_request">درخواست مورد نظر یافت نشد</string>
    <string name="error_forbidden" />
    <string name="error_unknown">عملیات با خطا مواجه شد!</string>
    <string name="error_no_connection">اینترنت در دسترس نیست</string>
    <string name="error_empty_response">در دریافت اطلاعات خطایی رخ داده است!</string>
    <string name="error_not_found">صفحه ی مورد نظر یافت نشد</string>
    <string name="error_timeout">برقراری ارتباط با خطا مواجه شد</string>
    <string name="user_comments_count">%d نظر</string>
    <string name="question_answer_count">%d  پرسش و پاسخ</string>
    <string name="similar_products">محصولات مشابه</string>


    <!-- product categories -->
    <string name="available_product_count">+%d کالا</string>
    <string name="home">خانه</string>
    <string name="categories">دسته بندی ها</string>
    <string name="search_in">جستجو در</string>
    <string name="search_all_products">جستجو در همه ی کالاها</string>
    <!-- <string name="product_in_category">در دسته  <b>%s</b></string>-->
    <string name="product_in_category">&lt;font color="#B3000000">از دسته &lt;/font> &lt;b>%s&lt;/b></string>
    <string name="special_sale">فروش ویژه</string>
    <string name="app_amazing_suggestions">شگفت انگیز اختصاصی اپ</string>
    <string name="filters">فیلترها</string>
    <string name="most_sales">پرفروش ترین ها</string>
    <string name="most_expensive">گران ترین ها</string>
    <string name="cheapest">ارزان ترین ها</string>
    <string name="newest">جدیدترین ها</string>
    <string name="sorting">مرتب سازی</string>
    <string name="retry">تلاش مجدد</string>

    <!-- Notification -->
    <string name="sync_newest_proudcts_channel_name">Newest Products</string>
    <string name="sync_newest_proudcts_channel_description">Background task for fetching new products</string>
    <string name="newest_products_notification_title">تاپ مارکت</string>
    <string name="newest_products_notification_content">%d کالای جدید اضافه شد.</string>

    <!-- Settings -->
    <string name="close_settings">Close Settings</string>
    <string name="settings_title">تنظیمات</string>
    <string name="enable_notification">جدیدترین محصولات را به من اطلاع بده</string>
    <string name="default_system_theme">حالت پیشفرض سیستم</string>
    <string name="enable_dark_theme">نمایش در حالت تم تاریک</string>
    <string name="app_theme">حالت تم برنامه</string>
    <string name="set_interval">تنظیم مدت زمان:</string>
    <string name="choose_hour">انتخاب ساعت</string>

    <!-- SignIn -->
    <string name="sign_in_text_helper">برای ورود و یا ثبت نام در دیجی کالا پست الکترونیک خود را وارد نمایید</string>
    <string name="email">پست الکتروینک</string>
    <string name="sign_in_digikala">ورود به دیجی کالا</string>
    <string name="privacy">با ورود و یا ثبت نام در دیجی کالا شما &lt;a href=\"https://www.digikala.com/page/terms\"&gt; شرایط و قوانین &lt;/a&gt; استفاده از سرویس های سایت دیجی کالا و &lt;a href=\"https://www.digikala.com/page/privacy\"&gt; قوانین حریم خصوصی&lt;/a&gt; آن را می پذیرید.</string>
    <string name="error_email_is_empty">پست الکترونیک را وارد نمایید</string>
    <string name="error_invalid_email">ایمیل معتبر نیست</string>

    <!-- Formatted date -->
    <string name="years_till_due">%d سال پیش</string>
    <string name="months_till_due">%d ماه پیش</string>
    <string name="weeks_till_due">%d هفته پیش</string>
    <string name="days_till_due">%d روز پیش</string>
    <string name="hours_till_due">%d ساعت پیش</string>
    <string name="minutes_till_due">%d دقیقه پیش</string>
    <string name="moment_till_due">چند لحظه پیش</string>

    <!-- Purchase -->
    <string name="sign_in_or_register">ورود یا ثبت‌نام</string>
    <string name="sign_in_guide">برای تجربه بهتر خرید‌ و بررسی روش ارسال کالا‌ها لطفا وارد شوید.</string>
    <string name="deliver_free">ارسال رایگان</string>
    <string name="free_explanation">برای سفارش بالای 500 هزار تومان</string>
    <string name="purchase_overview">خلاصه سبد</string>
    <string name="purchase_product_count">%d کالا</string>
    <string name="total_price">قیمت کالا‌ها</string>
    <string name="total_discount">تخفیف کالا‌ها</string>
    <string name="purchase_sum">جمع سبد خرید</string>
    <string name="total_discount_value">%1$d(%2$d%%)</string>
    <string name="purchase_warning">کالا‌های موجود در سبد شما ثبت و رزرو نشده اند، برای ثبت سفارش مراحل بعدی را تکمیل کنید.</string>
    <string name="guarantee_policy">گارانتی اصالت و سلامت فیزیکی کالا</string>
    <string name="digikala_name">دیجی‌کالا</string>
    <string name="in_stock">موجود در انبار دیجی‌کالا</string>
    <string name="cart_discount">%s تومان تخفیف</string>
    <string name="save_in_next_order">ذخیره در لیست خرید بعدی</string>
    <string name="continue_purchase">ادامه فرآیند خرید</string>
    <string name="empty_cart">سبد خرید شما خالی است.</string>
    <string name="next_cart">سبد خرید بعدی</string>

    <string-array name="purchase_tabs_titles">
        <item>خرید بعدی</item>
        <item>سبد خرید</item>
    </string-array>

    <!-- collapsable discount card -->
    <string name="discount_title">کد تخفیف</string>
    <string name="apply_discount">اعمال کد تخفیف</string>
    <string name="type_discount_value">کد تخفیف را وارد کنید…</string>
    <string name="cart">سبد خرید</string>

    <!-- NoNetworkConnection -->
    <string name="no_network_connection">خطا در اتصال به اینترنت…</string>


</resources>