<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ir.jatlin.topmarket.ui.settings.SettingsViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            style="@style/Widget.Market.AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/Theme.Material3.Light">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/space_medium">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MarketApp.TitleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/settings_title"
                        android:textSize="@dimen/setting_title_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_close_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/itemBackgroundColor"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_small"
                    android:background="?attr/colorSurface"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/space_medium">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/settings_notify"
                        style="@style/Widget.IOSched.Settings.Switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_small"
                        android:background="?attr/colorSurface"
                        android:checked="@{viewModel.notificationEnabled}"
                        android:layoutDirection="rtl"
                        android:onCheckedChanged="@{(view, checked) -> viewModel.enableNotification(checked)}"
                        android:paddingHorizontal="@dimen/space_medium"
                        android:paddingVertical="@dimen/space_medium"
                        android:text="@string/enable_notification" />


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="center_vertical"
                        android:layoutDirection="rtl"
                        android:paddingHorizontal="@dimen/space_medium">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.MarketApp.BodySmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{viewModel.notificationEnabled}"
                            android:text="@string/set_interval"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/menu_hour"
                            style="@style/Widget.Market.Settings.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/space_small"
                            android:enabled="@{viewModel.notificationEnabled}"
                            android:hint="@string/choose_hour">

                            <AutoCompleteTextView
                                android:id="@+id/tv_hour"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:contentDescription="@null" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_small"
                    android:background="?attr/colorSurface"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/space_medium">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MarketApp.BodySmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/space_medium"
                        android:text="@string/app_theme"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/settings_dark_theme"
                        style="@style/Widget.IOSched.Settings.Switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_small"
                        android:background="?attr/colorSurface"
                        android:checked="@{viewModel.darkThemeEnabled}"
                        android:enabled="@{!viewModel.defaultSystemTheme}"
                        android:layoutDirection="rtl"
                        android:onCheckedChanged="@{(view, checked) -> viewModel.setDarkTheme(checked)}"
                        android:paddingHorizontal="@dimen/space_medium"
                        android:paddingVertical="@dimen/space_medium"
                        android:text="@string/enable_dark_theme" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/settings_system_theme"
                        style="@style/Widget.Market.Settings.CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:checked="@{viewModel.defaultSystemTheme}"
                        android:onCheckedChanged="@{(view, checked) -> viewModel.setDefaultSystemTheme(checked)}"
                        android:paddingHorizontal="@dimen/space_medium"
                        android:text="@string/default_system_theme" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>