<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2018 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.FrameLayout">


    <LinearLayout
        android:id="@+id/collapsible_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="?android:listPreferredItemHeightSmall"
            android:orientation="horizontal"
            android:paddingStart="@dimen/space_medium"
            android:paddingEnd="@dimen/space_medium">

            <ImageView
                android:id="@+id/expand_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_baseline_expand_more_24" />

            <TextView
                android:id="@+id/discount_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/space_very_small"
                android:paddingBottom="@dimen/space_very_small"
                android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
                android:textStyle="bold"
                tools:text="@string/discount_title" />


        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_medium">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_small"
                android:layout_weight="1"
                android:hint="@string/type_discount_value">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.Market.TextInputEditText.OutlinedBox.Discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/discount_apply"
                style="@style/Widget.Market.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/apply_discount"
                app:cornerRadius="@dimen/space_small" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>

</merge>
